[project]
name = "havenly"
version = "0.1.0"
description = "An End to End Real Estate Management System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-cors-headers>=4.9.0",
    "django-debug-toolbar>=6.0.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "pillow>=12.0.0",
    "ruff>=0.12.10",
]
